--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>DCC202 2024-3-1: Atividade 2</title>
 </head>
 <body>
-    <p>Hello World! Meu nome é Gabriel</p>
+    <p style="font-size: 1.5em; font-family: sans-serif;">Hello World! Meu nome é Gabriel</p>
 </body>
 </html>
